--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .center {
     text-align: center;
     font-size: 32px;
-    background-color: blue;
+    background-color: #0a00b3;
     color: white;
     margin: 0;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .subcenter {
@@ -13,7 +13,7 @@
 }
 
 .header {
-    color: blue;
+    color: #0a00b3;
     width: 90%;
 }
 
